unpackaged/main/default/objects/DBHUB__mdt/DBHUB__mdt.object-meta.xml
<CustomObject>
    <description>Contains metadata for the different dashboard hub things, to make them easier to update.</description>
    <label>DBHUB</label>
    <pluralLabel>DBHUBs</pluralLabel>
</CustomObject>