unpackaged/main/default/objects/DBHUB__mdt/fields/Button__c.field-meta.xml
<CustomField>
    <fullName>Button__c</fullName>
    <label>Button</label>
    <length>50</length>
    <type>Text</type>
</CustomField>