unpackaged/main/default/objects/DBHUB__mdt/fields/DashURL__c.field-meta.xml
<CustomField>
    <fullName>DashURL__c</fullName>
    <label>DashURL</label>
    <type>Url</type>
</CustomField>